Minor refactoring to use of "Path.of" from JDK11.